# PTHome

./: README.md
dependencies/: Cargo.toml
dependencies/b15/: Cargo.toml
dependencies/bitdata/: Cargo.toml
dependencies/bitdata/benches/: bench_push.rs
dependencies/bitdata/src/: align_ops.rs  bit_ops.rs  bitdata.rs  data_size_ops.rs  enums.rs  lib.rs  ops.rs  push_ops.rs  raw_ptr_ops.rs  traits.rs
source_code/: Cargo.toml
source_code/src/: example.txt  lib.rs  main.rs
source_code/src/main_code/: data_structures.rs  mod.rs  parsing_sintax.rs  utilities.rs
source_code/src/tests/: utilities_test.rs
source_code/tests/: utilities_test.rs
source_code/tests/utilities_tests/: general_mod_tests.rs  rmv_comments_mod_tests.rs
